# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/display_manager/displaymgr.gni")
import("//build/test.gni")

module_output_path = "${displaymgr_part_name}/displaymgr"

##############################fuzztest##########################################
ohos_fuzztest("DisplayFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "${displaymgr_root_path}/test/fuzztest/display_fuzzer"

  include_dirs = [
    "./",
    "${displaymgr_utils_path}:utils_config",
  ]

  configs = [ "${displaymgr_utils_path}:coverage_flags" ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "./display_fuzzer.cpp" ]
  deps = [ "${displaymgr_inner_api}:displaymgr" ]

  external_deps = [
    "c_utils:utils",
    "ipc:ipc_core",
    "power_manager:powermgr_client",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    ":DisplayFuzzTest",
  ]
}
###############################################################################
