# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../displaymgr.gni")

module_output_path = "${displaymgr_part_name}/displaymgr"

##############################fuzztest##########################################
ohos_fuzztest("DisplayFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "${displaymgr_root_path}/test/fuzztest/display_fuzzer"

  include_dirs = [
    "./",
    "${displaymgr_root_path}/service/native/include",
    "${displaymgr_root_path}/service/zidl/include",
    "${displaymgr_inner_api}/native/include",
  ]

  configs = [
    "${displaymgr_utils_path}:utils_config",
    "${displaymgr_utils_path}:coverage_flags",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "${displaymgr_root_path}/service/native/src/display_auto_brightness.cpp",
    "${displaymgr_root_path}/service/native/src/display_event_handler.cpp",
    "${displaymgr_root_path}/service/native/src/display_param_helper.cpp",
    "${displaymgr_root_path}/service/native/src/display_power_mgr_service.cpp",
    "${displaymgr_root_path}/service/native/src/display_system_ability.cpp",
    "${displaymgr_root_path}/service/native/src/gradual_animator.cpp",
    "${displaymgr_root_path}/service/native/src/screen_action.cpp",
    "${displaymgr_root_path}/service/native/src/screen_controller.cpp",
    "${displaymgr_root_path}/service/zidl/src/display_power_callback_proxy.cpp",
    "${displaymgr_root_path}/service/zidl/src/display_power_mgr_stub.cpp",
    "./display_fuzzer.cpp",
  ]

  external_deps = [ "power_manager:power_permission" ]
  external_deps += [
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "data_share:datashare_consumer",
    "display_manager:displaymgr",
    "eventhandler:libeventhandler",
    "hicollie:libhicollie",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "multimedia_image_framework:image_native",
    "power_manager:power_setting",
    "power_manager:power_sysparam",
    "power_manager:powermgr_client",
    "safwk:system_ability_fwk",
    "sensor:sensor_interface_native",
    "window_manager:libdm",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    ":DisplayFuzzTest",
  ]
}
###############################################################################
