# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/display_manager/displaymgr.gni")
import("//build/test.gni")

module_output_path = "${displaymgr_native_part_name}/displaymgr_native"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "include",
    "//base/powermgr/power_manager/interfaces/innerkits/native/include",
    "//base/sensors/sensor/interfaces/native/include",
    "//utils/system/safwk/native/include",
  ]
}

##############################unittest##########################################
ohos_unittest("unittest_display_mgr_service") {
  module_out_path = module_output_path

  sources = [
    "src/display_power_mgr_brightness_test.cpp",
    "src/display_power_mgr_service_test.cpp",
  ]

  configs = [
    "${displaymgr_utils_path}:utils_config",
    ":module_private_config",
  ]

  deps = [
    "${displaymgr_native_innerkits_path}:displaymgr",
    "${displaymgr_service_path}:displaymgrservice",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "sensor:sensor_interface_native",
  ]
}
